   when upgrading from earlier versions to a version of the 2.2.x series. :)


!!Interface changes

* The --Separator-- layout has been removed in favor of an environment
  separator inset. There is no provision for inserting this inset from
  the GUI (though some menu entries use it) as it is automatically inserted
  when needed. See Section 3.4.6 of the User Guide for details.

!!!The following pref variables were added in 2.2:

* \save_origin:
  This variable was introduced to allow saving the document directory
  path in the document. If allowed, LyX will be able to locate all
  included files even when the document is manually moved/copied to
  a different location. If a valid \origin tag is present and the
  document was actually moved, the path of all included files is
  updated relative to the new location and the new origin will be
  recorded when saving again the document.

!!!The following pref variables were changed in 2.2:



!!!The following pref variables are obsoleted in 2.2:

* \rtl:
  This variable was introduced to guard against any bad consequence of
  the then-new right-to-left languages support. It is no longer needed
  because of improvements. Now right-to-left support is always enabled.


!!!The following new LyX functions have been introduced in 2.2:

* buffer-view-cache:
  Opens the last previewed output of the buffer, if it exists.

* buffer-move-next:
  Moves the current tab one spot to the right.

* buffer-move-previous:
  Moves the current tab one spot to the left.


!!!The following LyX functions have been changed in 2.2:



!!!The following LyX key bindings have been changed in 2.2:

* For bindings where Control + {PgDn, PgUp} switches to the
  {next, previous} tab, Control + Shift + {PgDn, PgUp} moves the current
  tab to the {next, previous} tab.


!!!The following LyX documents have been moved in 2.2:



!!!The following metadata files have been added to the tarball in 2.2:


