@@ -309,7 +309,7 @@ Style Subsection
   LabelType        Static
   LabelCounter     subsection
   LabelString      "Subsection \arabic{section}.\arabic{subsection}"
-  RefPrefix        sub
+  RefPrefix        subsec
   Argument 1
     LabelString    "Mode"
     MenuString     "Mode Specification|S"
