@@ -122,7 +122,7 @@ Style Subsection
 	TopSep			0.9
 	BottomSep		0.5
 	ParSep			0.5
-	RefPrefix		sub
+	RefPrefix		subsec
 	Font
 	  Series		Bold
 	  Size			Large
